# locust

./: pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: changelog.rst
locust/: clients.py  main.py  runners.py  shape.py  stats.py  web.py
locust/test/: test_main.py
